--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,7 @@ list-style-type:none;
 .header{
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid #e7e9fc;
 }
 
     
@@ -72,6 +73,7 @@ list-style-type:none;
     letter-spacing: 0.03em;
     color: var(--iris, #4D5AE5);
     text-transform: uppercase;
+    margin-right: 76px;
 
 }
 
@@ -103,6 +105,7 @@ list-style-type:none;
 .header-nav-menu{
     display: flex;
     gap: 40px;
+    padding: 24px 0;
     
 }
 
@@ -149,6 +152,7 @@ letter-spacing:0.02em;
 /**-------------------------------------ENTRY----------------------------------*/
 .entry {
     background-color: var(--navyblue);
+    padding: 188px 0;
 }
  
 .entry-container{
@@ -182,6 +186,8 @@ letter-spacing:0.02em;
         cursor:pointer;
         border-radius: 4px;
         border: none;
+        display: block;
+        min-width: 169px;
         padding: 16px 32px;
 }
 .button:hover, .button:focus{
@@ -252,6 +258,7 @@ letter-spacing:0.02em;
 }
 
 .action-img {
+    display: block;
 }
 
 /**-------------------------------------TEAM----------------------------------*/
@@ -284,6 +291,7 @@ letter-spacing:0.02em;
 .team-img {
     margin-bottom: 32px;
     width: calc((100%-24*3) / 4);
+    display: block;
 }
 
 .team-subtitle {
@@ -396,6 +404,7 @@ letter-spacing:0.02em;
 
 .portfolio-img {
     background: url(<path-to-image>);
+    display: block;
 }
 
 .portfolio-container{
