--- a/css/styles.css
+++ b/css/styles.css
@@ -105,18 +105,18 @@ list-style-type:none;
 .header-nav-menu{
     display: flex;
     gap: 40px;
-    padding: 24px 0;
+   
     
+}
+
+.header-nav-item { 
+    padding: 24px 0;
 }
 
 .header-address{
     display: flex;
     gap:40px
 }
-
-
-
-.header-nav-item {}
 
 .header-nav-link{
     color:var(--navyblue);
@@ -156,7 +156,6 @@ letter-spacing:0.02em;
 }
  
 .entry-container{
-    text-align: center;
         padding-top: 180px;
         padding-bottom: 188px;
     
@@ -185,10 +184,12 @@ letter-spacing:0.02em;
         letter-spacing:0.04em;
         cursor:pointer;
         border-radius: 4px;
-        border: none;
-        display: block;
-        min-width: 169px;
-        padding: 16px 32px;
+            border: none;
+            display: block;
+            min-width: 169px;
+            padding: 16px 32px;
+            margin: 0 auto;
+  
 }
 .button:hover, .button:focus{
     background-color: var(--ocean)
@@ -200,6 +201,10 @@ letter-spacing:0.02em;
     background-color: var(--white);
 }
 
+.content{
+    padding: 120px 0;
+}
+
 .content-list {
     display: flex;
     gap: 24px;
@@ -209,7 +214,7 @@ letter-spacing:0.02em;
 .content-item {
     padding-top: 120px;
     padding-bottom: 120px;
-    width: calc((100%- 24px*3) / 4);
+    width: calc((100% - 72px) / 4);
 }
 
 .content-subtitle {
@@ -231,7 +236,9 @@ letter-spacing:0.02em;
 
 /**-------------------------------------ACTION----------------------------------*/
 
-.action{}
+.action{
+    padding-bottom: 120px;
+}
 
 .action-title {
     color: var(--navyblue);
@@ -265,6 +272,7 @@ letter-spacing:0.02em;
 
 .team {
     background: var(--cloud);
+padding: 120px 0;
 }
 
 .team-title {
@@ -276,7 +284,7 @@ letter-spacing:0.02em;
         letter-spacing: 0.02em;
         text-transform: capitalize;
         padding-top: 120px;
-        padding-bottom: 72px;
+        margin-bottom: 72px;
 }
 
 .team-list {
@@ -285,13 +293,18 @@ letter-spacing:0.02em;
     padding-bottom: 120px;
 }
 
+.team-list-container{
+    padding: 32px 0;
+}
+
 .team-item {
-        background: var(--white);}
+        background: var(--white);
+    border-radius: 0px 0px 4px 4px;
+    }
 
 .team-img {
-    margin-bottom: 32px;
-    width: calc((100%-24*3) / 4);
-    display: block;
+width: calc((100%-24*3) / 4);
+display: block;
 }
 
 .team-subtitle {
