--- a/css/styles.css
+++ b/css/styles.css
@@ -380,8 +380,6 @@ display: block;
 }
 
 .button-item {
-    padding: 12px 24px;
-    border: 1px solid var(--cornflower);
         background: var(--cloud);
         cursor: pointer;
         border-radius: 4px;
@@ -402,6 +400,7 @@ display: block;
             background: var(--cloud);
             cursor: pointer;
             border-radius: 4px;
+            padding: 12px 24px;
 }
 
 .button-item:hover, .button-text:hover, .button-item:focus, .button-text:focus{
@@ -426,7 +425,7 @@ color: var(--white);
 .portfolio-item {
     border: 1px solid var(--cornflower, #E7E9FC);
         background: var(--white, #FFF);
-        width: calc((100%-24*2) / 3);         
+        width: calc((100%-48px) / 3);         
 }
 
 .portfolio-img {
@@ -436,6 +435,8 @@ color: var(--white);
 
 .portfolio-container{
     padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-subtitle {
@@ -445,6 +446,7 @@ color: var(--white);
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        margin-bottom: 8px;
 }
 
 .portfolio-text {
